fixed solar eye

--- a/public/views/leads/view/siteSurvey.html
+++ b/public/views/leads/view/siteSurvey.html
@@ -140,7 +140,7 @@
                         <div class="col-md-5">
                             <div class="middle-text">Solar Eye Availability Photo:</div>
                             <div class="middle slider-frame primary" ng-click="lead.siteSurvey.jobSite.eyeAvailability = !lead.siteSurvey.jobSite.eyeAvailability">
-                                <span ng-class="{'on' : lead.siteSurvey.jobSite.eyeAvailability, '' : !lead.siteSurvey.jobSite.eyeAvailability}" class="slider-button off">{{siteSurvey.jobSite.eyeAvailability && 'YES' || 'NO'}}</span>
+                                <span ng-class="{'on' : lead.siteSurvey.jobSite.eyeAvailability, '' : !lead.siteSurvey.jobSite.eyeAvailability}" class="slider-button off">{{lead.siteSurvey.jobSite.eyeAvailability && 'YES' || 'NO'}}</span>
                             </div>
                         </div>
                         <div class="col-md-5">
