--- a/public/views/leads/create/general.html
+++ b/public/views/leads/create/general.html
@@ -139,19 +139,14 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" data-ng-init="findAssignees()">
                         <div class="col-md-1_5 control-label">
                             <label>Assignee:</label>
                         </div>
                         <div class="col-md-8">
-                            <div class="select-style ui-select col-md-5" data-ng-init="findUsers()">
-                                <select data-ng-model="assignee">
-                                    <option value="">Not Contacted</option>
-                                    <option value="Attempted">Attempted</option> 
-                                    <option value="Contacted">Contacted</option> 
-                                    <option value="New Opportunity">New Opportunity</option> 
-                                    <option value="AdditionalContact">Additional Contact</option> 
-                                    <option value="Disqualified">Disqualified</option> 
+                            <div class="select-style ui-select col-md-5">
+                                <select data-ng-model="lead.assignee" ng-options="assignee._id as assignee.name for assignee in assignees">
+                                <option value="">-- No Assignee --</option>
                                 </select>
                             </div>
                         </div>
