--- a/public/views/settings/branding.html
+++ b/public/views/settings/branding.html
@@ -1,4 +1,4 @@
-<div class="leads" data-ng-controller="AccountsController" data-ng-init="findOne()">
+<div class="leads" data-ng-init="findOne()">
     <div class="row header">
         <div class="row form-wrapper">
             <div class="col-md-9 with-sidebar">
