--- a/public/views/settings/view.html
+++ b/public/views/settings/view.html
@@ -1,4 +1,4 @@
-<div id="pad-wrapper" class="user-profile" data-ng-controller="LeadsController" data-ng-init="findOne()">
+<div id="pad-wrapper" class="user-profile" data-ng-init="findOne()">
     <!-- header -->
     <div class="row header">
         <div class="col-md-8">
@@ -21,5 +21,5 @@
             <div class="tab-pane" id="tab2" data-ng-include="'views/settings/users.html'"></div>
         </div>
     </div>
-</div
+</div>
 
