--- a/public/views/leads/view/general.html
+++ b/public/views/leads/view/general.html
@@ -144,6 +144,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="form-group" data-ng-init="findAssignees()">
+                        <div class="col-md-1_5 control-label">
+                            <label>Assignee:</label>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="select-style ui-select col-md-5">
+                                <select data-ng-model="lead.assignee" ng-options="assignee._id as assignee.name for assignee in assignees">
+                                <option value="">-- No Assignee --</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <div class="col-md-1_5">
                             <label class="control-label">Notes:</label>
