--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -40,7 +40,7 @@ script(type='text/javascript', src='/js/services/modal.js')
 //Application Controllers
 script(type='text/javascript', src='/js/controllers/leads.js')
 script(type='text/javascript', src='/js/controllers/products.js')
-script(type='text/javascript', src='/js/controllers/accounts.js')
+script(type='text/javascript', src='/js/controllers/account.js')
 script(type='text/javascript', src='/js/controllers/users.js')
 
 if (process.env.NODE_ENV == 'development')
