--- a/public/views/settings/createUser.html
+++ b/public/views/settings/createUser.html
@@ -1,12 +1,12 @@
-<div class="leads" data-ng-controller="UsersController" data-ng-init="find()">
+<div class="leads" data-ng-controller="UsersController">
     <div class="row header">
         <div class="row form-wrapper">
             <div class="col-md-9 with-sidebar">
-                <form class="form-horizontal" role="form" data-ng-submit="update()">
+                <form class="form-horizontal" role="form" data-ng-submit="create()">
                     <br>
                     <div class="form-group">
                         <div class="col-md-8">
-                            <h3>User Information</h3>
+                            <h3>Create User</h3>
                         </div>
                     </div>
                     <div class="form-group">
