--- a/public/views/leads/create/general.html
+++ b/public/views/leads/create/general.html
@@ -145,7 +145,7 @@
                         </div>
                         <div class="col-md-8">
                             <div class="select-style ui-select col-md-5">
-                                <select data-ng-model="lead.assignee" ng-options="assignee._id as assignee.name for assignee in assignees">
+                                <select data-ng-model="assignee" ng-options="assignee._id as assignee.name for assignee in assignees">
                                 <option value="">-- No Assignee --</option>
                                 </select>
                             </div>
