fixed users and company accounts'

--- a/app/views/users/signup_admin.jade
+++ b/app/views/users/signup_admin.jade
@@ -6,7 +6,7 @@ block auth
         .row.form-wrapper
           .col-md-9
             
-            form.form-horizontal(role='form', action="/users", method="post")
+            form.form-horizontal(role='form', action="/admin/users/create", method="post")
               .form-group
                 .col-md-12
                     h1 Sign up
