--- a/public/views/settings/createUser/createUser.html
+++ b/public/views/settings/createUser/createUser.html
@@ -1,33 +1,30 @@
-<div class="leads" data-ng-controller="UsersController" data-ng-init="find()">
+<div class="leads" data-ng-controller="UsersController">
     <div class="row header">
         <div class="row form-wrapper">
             <div class="col-md-9 with-sidebar">
-                <form class="form-horizontal" role="form" data-ng-submit="update()">
+                <form class="form-horizontal" role="form" data-ng-submit="create()">
                     <br>
                     <div class="form-group">
                         <div class="col-md-8">
-                            <h3>User Information</h3>
+                            <h3>Create User</h3>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-1_5 control-label">Name:</label>  
-                        <div class="col-md-5">
-                            <input class="form-control" type="text" name="name" data-ng-model="account.companyName" placeholder="First Name" maxlength="30"/>
-                        </div>
-                        <div class="col-md-5">
-                            <input class="form-control" type="text" name="companyName" data-ng-model="account.companyName" placeholder="Last Name" maxlength="30"/>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-1_5 control-label">Username:</label>
-                        <div class="col-md-10">
-                            <input class="form-control" type="text" name="title"data-ng-model="account.website" placeholder="Username"/>
+                        <div class="col-md-7">
+                            <input class="form-control" type="text" name="name" data-ng-model="name" placeholder="First Name" maxlength="30" required/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-1_5 control-label">Email:</label>
-                        <div class="col-md-10">
-                            <input class="form-control" type="text" data-ng-model="account.email" placeholder="example@example.com">
+                        <div class="col-md-7">
+                            <input class="form-control" type="text" name="email" data-ng-model="email" placeholder="example@example.com" maxlength="100" required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-1_5 control-label">Password:</label>
+                        <div class="col-md-7">
+                            <input class="form-control" type="password" name="password" data-ng-model="password" placeholder="password" required />
                         </div>
                     </div>
                     <div class="form-group">
@@ -36,8 +33,8 @@
                         </div>
                         <div class="col-md-8">
                             <div class="select-style ui-select col-md-5">
-                                <select data-ng-model="user.state">
-                                    <option value="">--</option>
+                                <select name="role" data-ng-model="role" required>
+                                    <option value="">-- Select Role --</option>
                                     <option value="Admin">Administrator</option> 
                                     <option value="Installer">Installer</option>
                                     <option value="SalesRep">Sales Representative</option>
