--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -47,7 +47,8 @@ head
   link(rel="stylesheet", href='/css/compiled/new-user.css')
   link(rel="stylesheet", href='/css/compiled/user-profile.css')
   link(rel="stylesheet", href='/css/compiled/user-list.css')
-  link(rel="stylesheet" href="/css/compiled/icons.css")    
+  link(rel="stylesheet" href="/css/compiled/icons.css")
+  link(rel="stylesheet" href="/css/compiled/gallery.css")    
 
 
   //if lt IE 9
