--- a/public/views/leads/view/view.html
+++ b/public/views/leads/view/view.html
@@ -16,10 +16,12 @@
             <ul class="nav nav-tabs">
                 <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
                 <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
+                <li><a href="#tab3" data-toggle="tab">Photos</a></li>
             </ul>
             <div class="tab-content" id="tab-content">
                 <div class="tab-pane active" id="tab1" data-ng-include="'views/leads/view/general.html'"></div>
                 <div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>
+                <div class="tab-pane" id="tab3" data-ng-include="'views/leads/view/gallery.html'"></div>
             </div>
         </div>
         <div class="row header leads">
