adding role to user

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -35,6 +35,7 @@ script(type='text/javascript', src='/js/services/leads.js')
 script(type='text/javascript', src='/js/services/products.js')
 script(type='text/javascript', src='/js/services/accounts.js')
 script(type='text/javascript', src='/js/services/users.js')
+script(type='text/javascript', src='/js/services/photos.js')
 script(type='text/javascript', src='/js/services/modal.js')
 
 //Application Controllers
