--- a/public/views/modals/gallery.html
+++ b/public/views/modals/gallery.html
@@ -20,5 +20,5 @@
 </div>
 <div class="modal-footer">
   <button class="btn btn-default" type="button" ng-click="close()">Close</button>
-  <button class="btn btn-primary" type="button" ng-click="addPhotoSiteSurvey()">Add Photo</button>
+  <button class="btn btn-primary" type="button" ng-click="addPhotoSiteSurvey()" data-ng-disabled="newPhoto==null">Add Photo</button>
 </div>
