--- a/app/views/includes/head.hbs
+++ b/app/views/includes/head.hbs
@@ -15,7 +15,7 @@
   <meta content="SolarMongo - A Modern CRM" property="og:site_name">
 
   <!--bootstrap-->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"/>
+  <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/bootstrap/bootstrap-overrides.css"/>
 
   <!--jquery-ui-->
