--- a/app/views/includes/headFront.hbs
+++ b/app/views/includes/headFront.hbs
@@ -14,7 +14,7 @@
   <meta content="APP_LOGO" property="og:image">-->
   <meta content="SolarMongo - A Modern CRM" property="og:site_name">
 
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/bootstrap/bootstrap-overrides.css" rel="stylesheet">
   <link href="/css/lib/jquery-ui-1.10.2.custom.css" rel="stylesheet">
   <link href="/css/lib/font-awesome.css" rel="stylesheet">
