--- a/public/css/bootstrap/bootstrap-overrides.css
+++ b/public/css/bootstrap/bootstrap-overrides.css
@@ -370,6 +370,9 @@ table th span.line{
 .nav-tabs > .active > a, .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus{
 	outline:0;
 }
+.nav-tabs > li > a:hover{
+	cursor:pointer;
+}
 .carousel-control.left,
 .carousel-control.right {
 	cursor: pointer;
