Pricing page changes

--- a/app/views/includes/headFront.hbs
+++ b/app/views/includes/headFront.hbs
@@ -24,5 +24,6 @@
   <link href="/css/compiled/elements.css" rel="stylesheet">
   <link href="/css/views/home.css" rel="stylesheet">
   <link href="/css/compiled/slider.css" rel="stylesheet">
+  <link href="/css/views/pricing.css" rel="stylesheet">
 
 </head>
