pricing page changes

--- a/app/views/layout.hbs
+++ b/app/views/layout.hbs
@@ -1,4 +1,5 @@
-<!doctype html lang='en'>
+<!DOCTYPE html>
+<html>
 {{#if isLoggedIn}}
 
 {{> head }}
@@ -17,7 +18,6 @@
 {{else}}
 
 {{> headFront }}
-
 <body>
 	<div data-ng-app="solarmongo">
 		<navigation-list></navigation-list>
