--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -32,12 +32,18 @@
 <script type="text/javascript" src="/js/services/accounts.js"></script>
 <script type="text/javascript" src="/js/services/users.js"></script>
 <script type="text/javascript" src="/js/services/photos.js"></script>
+<script type="text/javascript" src="/js/services/uploader.js"></script>
 <script type="text/javascript" src="/js/services/modal.js"></script>
 <!--Application Controllers-->
 <script type="text/javascript" src="/js/controllers/leads.js"></script>
 <script type="text/javascript" src="/js/controllers/products.js"></script>
 <script type="text/javascript" src="/js/controllers/account.js"></script>
 <script type="text/javascript" src="/js/controllers/users.js"></script>
+
+<!-- Uploader -->
+<script type="text/javascript" src="/js/uploader/directive.js"></script>
+<script type="text/javascript" src="/js/uploader/service.js"></script>
+<script type="text/javascript" src="/js/uploader/controller.js"></script>
 
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
