new front end changes? :q

--- a/app/views/includes/headFront.hbs
+++ b/app/views/includes/headFront.hbs
@@ -25,5 +25,5 @@
   <link href="/css/views/home.css" rel="stylesheet">
   <link href="/css/compiled/slider.css" rel="stylesheet">
   <link href="/css/views/pricing.css" rel="stylesheet">
-
+  <link href="/css/views/footer.css" rel="stylesheet">
 </head>
