--- a/app/views/includes/foot.hbs
+++ b/app/views/includes/foot.hbs
@@ -3,6 +3,7 @@
 <!--script(type='text/javascript', src="/lib/jquery/jquery.min.js")-->
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="/js/thirdparty/jquery-ui-1.10.2.custom.min.js"></script>
+
 <script type="text/javascript" src="/js/thirdparty/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/thirdparty/jquery.knob.js"></script>
 <script type="text/javascript" src="/js/thirdparty/jquery.flot.js"></script>
@@ -15,6 +16,10 @@
 <script type="text/javascript" src="/lib/angular-cookies/angular-cookies.js"></script>
 <script type="text/javascript" src="/lib/angular-resource/angular-resource.js"></script>
 <script type="text/javascript" src="/lib/angular-route/angular-route.js"></script>
+<!--AngularFire and Firebase-->
+<script src="https://cdn.firebase.com/v0/firebase.js"></script>
+<script type="text/javascript" src="/lib/angularfire/angularfire.min.js"></script>
+
 <!--Angular UI-->
 <script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
 <script type="text/javascript" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js"></script>
